Swagger : try add example
